Reverted back to use maven version of PGPainless.| #1170

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -449,10 +449,10 @@ dependencies {
     implementation 'org.bitbucket.b_c:jose4j:0.7.6'
     implementation 'me.everything:overscroll-decor-android:1.1.0'
 
-    /*implementation ('org.pgpainless:pgpainless-core:0.2.0-alpha8') {
+    implementation ('org.pgpainless:pgpainless-core:0.2.0-alpha9') {
         //exclude group: 'org.bouncycastle' because we will specify it manually
         exclude group: 'org.bouncycastle'
-    }*/
+    }
 
     implementation "org.bouncycastle:bcpg-jdk15on:${rootProject.ext.bouncycastleVersion}"
     implementation "org.bouncycastle:bcpkix-jdk15on:${rootProject.ext.bouncycastleVersion}"
