--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -96,6 +96,8 @@ blocks:
           execution_time_limit:
             minutes: 15
           commands:
+            # switched to use java 11 to be able to run parametrized Robolectric tests
+            - sem-version java 11
             # run JUnit tests
             - ./script/ci-junit-tests.sh
 
