--- a/docker-mailserver/docker-compose.yml
+++ b/docker-mailserver/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   mail:
-    image: flowcrypt/flowcrypt-email-server:latest
+    image: flowcrypt/flowcrypt-email-server:0.0.1
     hostname: ${HOSTNAME}
     domainname: ${DOMAINNAME}
     container_name: ${CONTAINER_NAME}
