--- a/.github/workflows/check-for-emails.yml
+++ b/.github/workflows/check-for-emails.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Scan comment
       id: scan
-      uses: seisvelas/comment-email-address-alerts@v8
+      uses: seisvelas/comment-email-address-alerts@v2.4
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+        exemptions: test,example.com
