--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -242,6 +242,8 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        //need for ACRA, maybe will be deleted in the upcoming updates
+        freeCompilerArgs = ['-Xjvm-default=enable']
     }
 
     lintOptions {
@@ -360,6 +362,8 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:${rootProject.ext.glideVersion}"
     kapt 'androidx.annotation:annotation:1.2.0'
     kapt "androidx.room:room-compiler:$roomVersion"
+    //ACRA needs the following dependency to use a custom report sender
+    kapt("com.google.auto.service:auto-service:1.0")
 
     devDebugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
 
@@ -442,9 +446,7 @@ dependencies {
     implementation 'com.hootsuite.android:nachos:1.2.0'
     implementation 'com.nulab-inc:zxcvbn:1.5.0'
     implementation 'commons-io:commons-io:2.8.0'
-    implementation 'ch.acra:acra-http:5.8.1'
     implementation 'ja.burhanrashid52:photoeditor:1.1.1'
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.32"
     implementation 'net.openid:appauth:0.8.1'
     implementation 'org.bitbucket.b_c:jose4j:0.7.7'
     implementation 'me.everything:overscroll-decor-android:1.1.0'
@@ -456,4 +458,8 @@ dependencies {
 
     implementation "org.bouncycastle:bcpg-jdk15on:${rootProject.ext.bouncycastleVersion}"
     implementation "org.bouncycastle:bcpkix-jdk15on:${rootProject.ext.bouncycastleVersion}"
+
+    implementation 'ch.acra:acra-http:5.8.1'
+    //ACRA needs the following dependency to use a custom report sender
+    compileOnly("com.google.auto.service:auto-service-annotations:1.0")
 }
