--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,6 +25,7 @@ global_job_config:
       value: /home/semaphore/Android/Sdk
   prologue:
     commands:
+      - sem-version java 11
       - export PATH=${ANDROID_SDK_ROOT}/emulator:${ANDROID_SDK_ROOT}/cmdline-tools/latest/bin:${ANDROID_SDK_ROOT}/platform-tools:${PATH}
       - sudo rm -rf ~/.rbenv ~/.phpbrew
       - checkout
@@ -58,7 +59,7 @@ blocks:
         - name: 'Build Project'
           commands:
             # Android Gradle plugin requires Java 11
-            - sem-version java 11
+            # - sem-version java 11
             # print debug info
             - cat /proc/cpuinfo
             # print Java version
@@ -101,7 +102,7 @@ blocks:
             minutes: 15
           commands:
             # switched to use java 11 to be able to run parametrized Robolectric tests
-            - sem-version java 11
+            # - sem-version java 11
             # run JUnit tests
             - ./script/ci-junit-tests.sh
 
