--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -458,6 +458,7 @@ dependencies {
     implementation 'me.everything:overscroll-decor-android:1.1.0'
     implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20200713.1'
     implementation 'org.jsoup:jsoup:1.14.1'
+    implementation 'com.sandinh:zbase32-commons-codec_2.12:1.0.0'
 
     implementation ('org.pgpainless:pgpainless-core:0.2.6') {
         // exclude group: 'org.bouncycastle' because we will specify it manually
