--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -236,8 +236,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility rootProject.ext.javaSourceCompatibility
-        targetCompatibility rootProject.ext.javaSourceCompatibility
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     buildFeatures {
@@ -245,7 +245,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
         //need for ACRA, maybe will be deleted in the upcoming updates
         freeCompilerArgs = ['-Xjvm-default=enable']
     }
