--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -386,6 +386,7 @@ dependencies {
     androidTestImplementation "com.squareup.okhttp3:okhttp-tls:${rootProject.ext.okhttpVersion}"
     androidTestUtil 'androidx.test:orchestrator:1.4.0'
 
+    testImplementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
     testImplementation 'org.robolectric:robolectric:4.6.1'
