--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -407,7 +407,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
-    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation "androidx.room:room-runtime:$roomVersion"
