--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -404,10 +404,10 @@ dependencies {
     implementation "androidx.cardview:cardview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.browser:browser:1.3.0'
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerViewVersion}"
-    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
-    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.ext.lifecycleVersion}"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation "androidx.room:room-runtime:$roomVersion"
