--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -40,6 +40,10 @@ android {
         versionCode rootProject.ext.appVersionCode
         versionName rootProject.ext.appVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // The following argument makes the Android Test Orchestrator run its
+        // "pm clear" command after each test invocation. This command ensures
+        // that the app's state is completely cleared between tests.
+        testInstrumentationRunnerArguments clearPackageData: 'true'
         multiDexEnabled true
 
         // used by Room, to test migrations
@@ -224,6 +228,7 @@ android {
 
     testOptions {
         animationsDisabled = true
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
         unitTests.all {
             testLogging {
                 events TestLogEvent.FAILED,
