--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,7 +5,7 @@ agent:
     type: e1-standard-4
     os_image: ubuntu1804
 execution_time_limit:
-  minutes: 45
+  minutes: 60
 
 fail_fast:
   stop:
@@ -103,6 +103,8 @@ blocks:
             - ./script/ci-junit-tests.sh
 
         - name: 'Instrumentation tests(No email server)'
+          execution_time_limit:
+            minutes: 45
           matrix:
             - env_var: EMULATOR
               values: [ "0", "1", "2", "3" ]
@@ -117,6 +119,8 @@ blocks:
             - ./script/ci-instrumentation-tests-without-mailserver.sh 4 $EMULATOR
 
         - name: 'Instrumentation tests(with email server)'
+          execution_time_limit:
+            minutes: 45
           commands:
             # Run an email server
             - cd docker-mailserver && ./run_email_server.sh && cd -
