Fixed tests. Refactored code.| #1188

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -164,7 +164,7 @@ android {
         devTest {
             versionNameSuffix "_devTest"
             buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'false'
-            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'true'
+            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
             buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
             buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BODY\""
             buildConfigField 'String', 'ATTESTER_URL', "\"https://localhost:1212/\""
